--- a/styles/main.css
+++ b/styles/main.css
@@ -1,87 +1,103 @@
-/* BODY */
+/* Body Styles */
 body {
-  margin: 0;
-  padding: 0;
+  background-color: #f9ebe1;
+  color: #333;
   font-family: "Roboto", Arial, sans-serif !important;
   overflow-x: hidden; }
 
-/* HEADER */
+/* Header Styles */
 .header {
-  background-color: #a23c26;
+  background-color: #a50000;
   color: white;
   padding: 20px;
-  text-align: center;
-  width: 100%; }
-
-.subtitle {
-  color: #e9e3e3;
   text-align: center; }
 
+/* Subtitle Styles */
+.subtitle {
+  color: #d62828;
+  text-align: center; }
+
+/* Card Styles */
 .card {
-  background-color: #e9e3e3;
+  background-color: white;
   border-radius: 5px;
   padding: 20px;
   margin: 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); }
 
-/* BACK TO TOP BUTTON */
+/* Back to Top Button Styles */
 #btn-back-to-top {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  display: none; }
+  display: none;
+  background-color: #a50000;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  z-index: 2; }
+  #btn-back-to-top:hover {
+    background-color: #d62828; }
 
-/* LATERAL MENU */
+/* Lateral Menu Styles */
 .lateral-menu {
   width: 5%;
   /* Collapsed width as a percentage of the page width */
   height: 100vh;
   /* Full page height */
-  background-color: #a23c26;
+  background-color: #a50000;
   position: fixed;
   top: 0;
   left: 0;
-  transition: width 0.3s;
-  /* Add smooth transition */ }
+  transition: width 0.5s;
+  z-index: 1;
+  /* Ensure the menu is above other content */ }
   .lateral-menu ul {
     list-style: none;
     padding: 0;
     margin: 0; }
     .lateral-menu ul li {
-      text-align: center;
       padding: 10px 0; }
       .lateral-menu ul li a {
         text-decoration: none;
         color: white;
         display: none;
-        /* Hide links by default */ }
+        /* Hide links by default */
+        margin-left: 15%; }
   .lateral-menu:hover {
     width: 15%;
     /* Expanded width as a percentage of the page width on hover */ }
     .lateral-menu:hover + #content {
       margin-left: 15%;
-      /* Adjust the margin for the content */ }
-    .lateral-menu:hover li {
-      border-bottom: 1px solid white; }
-    .lateral-menu:hover ul li a {
-      display: inline;
-      /* Show links when menu is expanded */ }
-  .lateral-menu.expanded-content {
-    width: 15%;
-    transition: width 0.3s; }
-    .lateral-menu.expanded-content + #content {
-      margin-left: 15%; }
-    .lateral-menu.expanded-content li {
-      border-bottom: 1px solid white; }
-    .lateral-menu.expanded-content ul li a {
-      display: inline;
-      /* Show links when menu is expanded */ }
+      /* Adjust the margin for the content */
+      max-width: 85%;
+      /* Adjust the max-width for the content */ }
+  .lateral-menu ul li a {
+    display: inline;
+    transition: opacity 0.5s; }
 
-/* CONTENT */
+/* Content Styles */
 #content {
   margin-left: 5%;
   /* Adjust the margin for the content */
-  max-width: 100%;
-  transition: margin-left 0.3s;
-  background-color: #e2552d;
-  padding: 20px; }
+  max-width: 95%;
+  /* Adjusted for the expanded menu */
+  transition: margin-left 0.5s, max-width 0.5s;
+  /* Synchronize transitions */
+  background-color: #d62828; }
+
+/* Ensure smooth transition for links when the menu is collapsed */
+.lateral-menu:not(:hover) ul li a {
+  opacity: 0;
+  transition: opacity 0.5s; }
+
+/* Button Styles */
+.button {
+  background-color: #b21f35;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer; }
+  .button:hover {
+    background-color: #871728; }
